part12 12.12: Complete persisting data in redis

--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -17,5 +17,5 @@ services:
     ports:
       - 6379:6379
     command: ['redis-server', '--appendonly', 'yes'] # Overwrite the CMD
-    volumes:
+    volumes: # Declare the volume
       - ./redis_data:/data
