--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -19,3 +19,19 @@ services:
     command: ['redis-server', '--appendonly', 'yes'] # Overwrite the CMD
     volumes: # Declare the volume
       - ./redis_data:/data
+  server:
+    image: todo-backend-dev
+    build:
+      context: . # The context will pick this directory as the "build context"
+      dockerfile: dev.Dockerfile # This will simply tell which dockerfile to read
+    volumes:
+      - ./:/usr/src/app # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
+    ports:
+      - 3000:3000
+    container_name: todo-backend-dev # This will name the container todo-backend-dev
+    depends_on: # https://docs.docker.com/compose/compose-file/#depends_on
+      - mongo
+      - redis
+    environment: # use 'host.docker.internal' in both mongo_url & redis_url instead of localhost: https://stackoverflow.com/questions/63764895/redis-connect-econnrefused-127-0-0-16379
+      - MONGO_URL=mongodb://the_username:the_password@host.docker.internal:3456/the_database
+      - REDIS_URL=redis://host.docker.internal:6379
