part12 12.18: Complete configure the nginx server to be in front of todo-backend

--- a/todo-app/nginx.conf
+++ b/todo-app/nginx.conf
@@ -17,5 +17,11 @@ http {
       # Requests are directed to http://localhost:4000 through the DNS "service name" of docker container which is 'todo-frontend' in docker-compose.dev.yml file
       proxy_pass http://todo-frontend:4000;
     }
+
+    # Requests starting with /api/ are handled
+    location /api/ {
+      # Requests are directed to http://localhost:3000 through the DNS "service name" of docker container which is 'todo-backend' in docker-compose.dev.yml file
+      proxy_pass http://todo-backend:3000;
+    }
   }
 }
