--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -27,13 +27,13 @@ COPY --from=test-stage /usr/src/app /usr/src/app/
 RUN npm run build
 
 # using serve to serve the static build files also works: $ docker run -p 4000:3000 todo-frontend
-# RUN npm install -g serve
+RUN npm install -g serve
 
-# CMD ["serve", "build"]
+CMD ["serve", "build", "-p", "4000"]
 
-# This is the third stage, everything before this is gone, except the files we want to COPY
-FROM nginx:1.20-alpine
+# # This is the third stage, everything before this is gone, except the files we want to COPY
+# FROM nginx:1.20-alpine
 
-# COPY the directory build from build-stage to /usr/share/nginx/html
-# The target location here was found from the docker hub page
-COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+# # COPY the directory build from build-stage to /usr/share/nginx/html
+# # The target location here was found from the docker hub page
+# COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
